--- a/src/main/resources/assets/ventana1.fxml
+++ b/src/main/resources/assets/ventana1.fxml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.ControllerMainScreen">
+   <children>
+      <AnchorPane prefHeight="75.0" prefWidth="800.0">
+         <children>
+            <Text layoutX="96.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Eina d'encriptació" AnchorPane.leftAnchor="75.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="525.0" prefWidth="800.0" AnchorPane.topAnchor="75.0">
+         <children>
+            <Line endX="711.0" layoutX="89.0" startX="-100.0" />
+            <Button layoutX="294.0" layoutY="133.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Encriptar arxiu" AnchorPane.leftAnchor="294.0" AnchorPane.rightAnchor="306.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Button layoutX="295.0" layoutY="225.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Desencriptar arxiu">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
