--- a/src/main/resources/assets/ventana2.fxml
+++ b/src/main/resources/assets/ventana2.fxml
@@ -1,6 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane prefHeight="75.0" prefWidth="800.0">
+         <children>
+            <Text layoutX="96.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Eina d'encriptació" AnchorPane.leftAnchor="75.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Button layoutX="14.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="44.0" text="&lt;--" />
+         </children></AnchorPane>
+      <AnchorPane prefHeight="525.0" prefWidth="800.0" AnchorPane.topAnchor="75.0">
+         <children>
+            <Line endX="706.0" layoutX="94.0" startX="-94.0" />
+            <Text layoutX="128.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clau pública:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Text layoutX="204.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Arxiu:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Text layoutX="204.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Destí:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Button layoutX="316.0" layoutY="376.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="169.0" text="Encriptar">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+            <TextField fx:id="textClauPublica" layoutX="275.0" layoutY="91.0" prefHeight="32.0" prefWidth="231.0" />
+         </children></AnchorPane>
+   </children>
+</AnchorPane>
