--- a/src/main/resources/assets/ventana3.fxml
+++ b/src/main/resources/assets/ventana3.fxml
@@ -2,5 +2,9 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane prefHeight="75.0" prefWidth="800.0" />
+      <AnchorPane prefHeight="525.0" prefWidth="800.0" AnchorPane.topAnchor="75.0" />
+   </children>
+</AnchorPane>
