--- a/src/main/resources/assets/ventana3.fxml
+++ b/src/main/resources/assets/ventana3.fxml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane prefHeight="75.0" prefWidth="800.0" />
+      <AnchorPane prefHeight="75.0" prefWidth="800.0">
+         <children>
+            <Text layoutX="96.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Eina de desencriptació" AnchorPane.leftAnchor="75.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Button layoutX="14.0" layoutY="25.0" mnemonicParsing="false" onAction="#returnMainScreen" prefHeight="25.0" prefWidth="44.0" text="&lt;--" />
+         </children>
+      </AnchorPane>
       <AnchorPane prefHeight="525.0" prefWidth="800.0" AnchorPane.topAnchor="75.0" />
    </children>
 </AnchorPane>
