--- a/src/main/resources/assets/ventana3.fxml
+++ b/src/main/resources/assets/ventana3.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -17,6 +20,51 @@
             <Button layoutX="14.0" layoutY="25.0" mnemonicParsing="false" onAction="#returnMainScreen" prefHeight="25.0" prefWidth="44.0" text="&lt;--" />
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="525.0" prefWidth="800.0" AnchorPane.topAnchor="75.0" />
+      <AnchorPane layoutY="75.0" prefHeight="525.0" prefWidth="800.0">
+         <children>
+            <Line endX="706.0" layoutX="94.0" startX="-94.0" />
+            <Text layoutX="72.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clau privada:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Text layoutX="164.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Arxiu:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Text layoutX="163.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Destí:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Text layoutX="72.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contrasenya:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <Button layoutX="300.0" layoutY="378.0" mnemonicParsing="false" onAction="#desencriptarArchivo" prefHeight="53.0" prefWidth="200.0" text="Desencriptar">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+            <Label fx:id="labelClauPrivada" layoutX="246.0" layoutY="92.0" onMouseClicked="#selectPrivateKey" prefHeight="34.0" prefWidth="402.0" style="-fx-border-color: black;" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelArchivo" layoutX="246.0" layoutY="155.0" onMouseClicked="#selectFileToDecrypt" prefHeight="34.0" prefWidth="402.0" style="-fx-border-color: black;" textAlignment="CENTER" textOverrun="CLIP">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelDestino" layoutX="246.0" layoutY="278.0" onMouseClicked="#selectDestination" prefHeight="34.0" prefWidth="402.0" style="-fx-border-color: black;" textAlignment="CENTER" textOverrun="CLIP">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="textPassword" layoutX="246.0" layoutY="215.0" prefHeight="34.0" prefWidth="402.0" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
