--- a/src/main/resources/assets/ventana3.fxml
+++ b/src/main/resources/assets/ventana3.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
@@ -63,7 +63,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <TextField fx:id="textPassword" layoutX="246.0" layoutY="215.0" prefHeight="34.0" prefWidth="402.0" />
+            <PasswordField fx:id="textPassword" layoutX="246.0" layoutY="215.0" prefHeight="34.0" prefWidth="402.0" />
          </children>
       </AnchorPane>
    </children>
